test-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: test-app
  labels:
    app.kubernetes.io/name: test-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    name: http
  selector:
    app.kubernetes.io/name: test-app
